FIX: classes with icon sizes used for buttons upload and remove picture in profile page on mobile

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1420,7 +1420,6 @@
     .icn-media {
 
       &:after {
-        font-size: 24px;
 
         @include media-breakpoint-up($desktop-breakpoint) {
           font-size: 18px;
