--- a/src/styles/components/settings/_profile.scss
+++ b/src/styles/components/settings/_profile.scss
@@ -64,7 +64,6 @@
 .reset-user-image {
   position: absolute;
   cursor: pointer;
-  font-size: 24px;
   color: #fff;
   text-shadow: $shadow-light;
 
